[package]
name = "edgy-s"
version = "0.1.0"
edition = "2024"
authors = ["SmileSky <mzdk100@foxmail.com>"]
license = "Apache-2.0"
description = "A minimalist WebSocket bidirectional RPC framework for building microservice applications"
repository = "https://github.com/mzdk100/edgy-s.git"
readme = "README.md"
keywords = ["websocket", "rpc", "microservice", "bidirectional", "async"]
categories = ["network-programming", "web-programming::websocket", "asynchronous"]

[[example]]
name = "client"
required-features = ["client"]

[[example]]
name = "server"
required-features = ["server"]

[features]
default = ["req_id_u8"]

# Request ID width configuration
# Choose one based on your concurrency requirements
req_id_u8 = []   # Default: supports up to 256 concurrent requests (u8)
req_id_u16 = []  # Supports up to 65,536 concurrent requests (u16)
req_id_u32 = []  # Supports up to ~4.2 billion concurrent requests (u32)
req_id_u64 = []  # Virtually unlimited concurrent requests (u64)

client = [
    "futures-util/default",
    "postcard/alloc",
    "serde/default",
    "tokio/net",
    "tokio/sync",
    "tokio/rt",
    "tokio/rt-multi-thread",
    "tokio-tungstenite/default",
    "tracing/default"
]
server = [
    "futures-util/default",
    "hyper/http1",
    "hyper/server",
    "hyper-util/tokio",
    "postcard/alloc",
    "serde/default",
    "tokio/net",
    "tokio/sync",
    "tokio/rt",
    "tokio/rt-multi-thread",
    "tokio-tungstenite/default",
    "tracing/default",
]

[dependencies]

[dependencies.tracing]
version = "0.1.44"
optional = true

[dependencies.tokio]
version = "1.49.0"
optional = true

[dependencies.futures-util]
version = "0.3.32"
optional = true

[dependencies.serde]
version = "1.0.228"
optional = true

[dependencies.hyper-util]
version = "0.1.20"
optional = true

[dependencies.hyper]
version = "1.8.1"
optional = true

[dependencies.tokio-tungstenite]
version = "0.28.0"
optional = true

[dependencies.postcard]
version = "1.1.3"
optional = true

[dev-dependencies]
anyhow = "1.0.102"
tokio = {version = "1.49.0", features = ["macros", "rt-multi-thread"]}
tracing-subscriber = "0.3.22"